Overflow et Fix the table

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
 }
 
@@ -60,7 +60,7 @@ body {
 }
 
 .saison {
-    margin-left: 25rem;
+    margin-left: 26rem;
 }
 
 .chrono {
@@ -72,8 +72,10 @@ body {
 }
 
 .news {
-    height: 65rem;
+    height: 75rem;
 }
+
+
 
 // MOBILE
 @media (max-width: 450px) {
@@ -84,5 +86,10 @@ body {
 
     .club {
         width: 10em
+    }
+
+    .overflooz {
+        overflow-x: scroll;
+        width: 100vw;
     }
 }
